Android cutoff fix done via 100% instead of 100vh whenever necessary

--- a/css/loader.css
+++ b/css/loader.css
@@ -1,7 +1,7 @@
 /*LOADING SCREEN*/
 #loader_wrapper{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     position: absolute;
     top: 0;
